# organoid_scp

./: .gitignore  01_coverage.ipynb  02_differential_expression.ipynb  02_distributions.ipynb  03_differential_expression.ipynb  README.md  coverage.ipynb
data/: README.md
data/metamorpheus/Task Settings/: Task1-SearchTaskconfig.toml
data/proteome_discoverer/: Payne_Organoids_InputFiles_SpecializedTraces.txt  Payne_Organoids_Proteins_PeptideGroups.txt  Payne_Organoids_StudyInformation.txt
oscutils/: README.md  pyproject.toml
oscutils/src/oscutils/: __init__.py  load_data.py  make_plots.py
oscutils/src/oscutils/data/: README.md
oscutils/src/oscutils/data/metamorpheus/Task Settings/: Task1-SearchTaskconfig.toml
oscutils/src/oscutils/data/metamorpheus/Task1-SearchTask/: AutoGeneratedManuscriptProse.txt
oscutils/src/oscutils/data/metamorpheus/run20230411/Task1-SearchTask/: ExperimentalDesign.tsv
oscutils/src/oscutils/data/metamorpheus/run20230508/: allResults.txt
oscutils/src/oscutils/data/metamorpheus/run20230508/Task1-SearchTask/: ExperimentalDesign.tsv  results.txt
oscutils/src/oscutils/data/proteome_discoverer/: Payne_Organoids_AnnotationProteinGroups.txt  Payne_Organoids_InputFiles.txt  Payne_Organoids_InputFiles_StudyInformation.txt  Payne_Organoids_PathwayProteinGroups.txt  Payne_Organoids_PeptideGroups_ConsensusFeatures.txt  Payne_Organoids_ProteinGroups.txt  Payne_Organoids_ProteinGroups_PeptideGroups.txt  Payne_Organoids_Proteins_AnnotationProteinGroups.txt  Payne_Organoids_Proteins_ProteinGroups.txt
oscutils/src/oscutils/data/proteome_discoverer/run20230410/: Payne_Organoids_Proteins_PathwayProteinGroups.txt  Payne_Organoids_SpecializedTraces.txt
oscutils/src/oscutils/data/proteome_discoverer/run20230809/: Payne_organoids2.0_InputFiles.txt
