[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oscutils"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oscutils = [
    "data/metamorpheus/Task1-SearchTask/AllQuantifiedProteinGroups.tsv",
    "data/metamorpheus/Task1-SearchTask/ExperimentalDesign.tsv",
    "data/proteome_discoverer/Payne_Organoids_AnnotationProteinGroups.txt",
    "data/proteome_discoverer/Payne_Organoids_PathwayProteinGroups.txt",
    "data/proteome_discoverer/Payne_Organoids_ProteinGroups.txt",
    "data/proteome_discoverer/Payne_Organoids_Proteins.txt",
    "data/proteome_discoverer/Payne_Organoids_StudyInformation.txt",
]
