[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oscutils"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "altair==4.2.2",
    "altair-data-server>=0.4.1",
    "pandas>=1.4",
    "scipy>=1.10.1",
    "statsmodels>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oscutils = [
    "data/metamorpheus/run20230411/Task1-SearchTask/AllQuantifiedProteinGroups.tsv",
    "data/metamorpheus/run20230411/Task1-SearchTask/ExperimentalDesign.tsv",
    "data/metamorpheus/run20230508/Task1-SearchTask/AllQuantifiedProteinGroups.tsv",
    "data/metamorpheus/run20230508/Task1-SearchTask/ExperimentalDesign.tsv",
    "data/proteome_discoverer/run20230410/Payne_Organoids_InputFiles.txt",
    "data/proteome_discoverer/run20230410/Payne_Organoids_PeptideGroups.txt",
    "data/proteome_discoverer/run20230410/Payne_Organoids_Proteins.txt",
    "data/proteome_discoverer/run20230809/Payne_organoids2.0_InputFiles.txt",
    "data/proteome_discoverer/run20230809/Payne_organoids2.0_PeptideGroups.txt",
    "data/proteome_discoverer/run20230809/Payne_organoids2.0_Proteins.txt",
]
